fix: 700 too wide

--- a/static/style.css
+++ b/static/style.css
@@ -50,7 +50,7 @@ nav ul li a:hover {
   color: #fff;
 }
 main {
-  max-width: 700px;
+  max-width: 624;
   clear: both;
 }
 main figure:first-child img {
